<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_semi_dark"
    android:transitionName="cont"
    tools:context=".ExpenseEditor"
    >

    <fragment
        android:id="@+id/fragment"
        android:name="com.maaps.expense.Dummy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/edit_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:scrollbarThumbVertical="@color/accent_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:paddingStart="43dp"
            android:paddingEnd="43dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    style="@style/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextExpenseName"
                    style="@style/on_bright"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_simple"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/amount" />

                <EditText
                    android:id="@+id/editTextNumber"
                    style="@style/on_bright"
                    android:hint="@string/_42_42"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_simple"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    style="@style/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/borrowers" />

                <TextView
                    android:id="@+id/add_borrower"
                    style="@style/on_bright"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_simple"
                    android:onClick="addBorrowerButtonClick"
                    android:text="@string/add_borrower"
                    android:textAlignment="center" />

            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="50dp"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/payer" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/on_bright"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_simple"
                    android:ems="10"
                    android:onClick="addPayerButtonClick"
                    android:hint="@string/user"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/editTextDate"
                    style="@style/on_bright"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_simple"
                    android:ems="10"
                    android:onClick="pickDateTime"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="sendExpenseClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_button"
        android:contentDescription="@string/plus_sign"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>