<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".PaymentListElement">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/user_name"
            style="@style/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintStart_toEndOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <ImageView
            android:id="@+id/circle"
            style="@style/small_text"
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="29dp"
            android:text="@string/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/cricle_green"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="27dp"
            android:clickable="true"
            android:background="@drawable/background_button_simple"
            app:layout_constraintBottom_toBottomOf="@+id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_name" />

        <TextView
            android:id="@+id/amount"
            style="@style/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginEnd="27dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_name"
            app:layout_constraintEnd_toStartOf="@+id/checkbox"
            app:layout_constraintTop_toTopOf="@+id/user_name" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/background_button_simple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>